--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
     "@fontsource-variable/geist-mono": "^5.2.7",
     "@heroicons/react": "^2.2.0",
     "@material-symbols/font-400": "^0.39.1",
+    "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-collapsible": "^1.1.12",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/themes": "^3.2.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -27,16 +29,18 @@
     "next": "^14.2.33",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-markdown": "^10.1.0",
+    "remark-gfm": "^4.0.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0-alpha.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
-    "@tailwindcss/postcss": "^4.0.0-alpha.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
