--- a/package.json
+++ b/package.json
@@ -13,10 +13,15 @@
     "@fontsource-variable/geist-mono": "^5.2.7",
     "@google-cloud/vertexai": "^1.10.0",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-label": "^2.1.8",
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-tabs": "^1.1.13",
+    "@stackframe/init-stack": "^2.8.54",
+    "@stackframe/stack": "^2.8.54",
     "class-variance-authority": "^0.7.1",
+    "lucide-react": "^0.553.0",
     "next": "16.0.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
